Implement favourite function

--- a/src/assets/scss/1-settings/_colors.scss
+++ b/src/assets/scss/1-settings/_colors.scss
@@ -80,3 +80,6 @@ $text_light:            lighten($darkgrey, 30);
 
 $checkbox-inactive_color:  $grey;
 $checkbox-active_color:    $blue;
+
+$favourite-inactive_color:  $grey;
+$favourite-active_color:    $blue;
