--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -23,6 +23,7 @@
 @import "6-components/btn";
 @import "6-components/container";
 @import "6-components/dot";
+@import "6-components/favourite";
 @import "6-components/form";
 @import "6-components/icon";
 @import "6-components/link";
