Improve design and add 'end'-message

--- a/src/assets/scss/1-settings/_colors.scss
+++ b/src/assets/scss/1-settings/_colors.scss
@@ -83,3 +83,5 @@ $checkbox-active_color:    $blue;
 
 $favourite-inactive_color:  $grey;
 $favourite-active_color:    $blue;
+
+$text-info-color:           $grey;
