--- a/src/assets/scss/6-components/_scrolltop.scss
+++ b/src/assets/scss/6-components/_scrolltop.scss
@@ -8,14 +8,14 @@
   position: fixed;
   right: $space;
   bottom: $space;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   border-radius: 100%;
-  background: $color-primary-lt;
-  color: $color-primary-contrast;
+  background-color: $color-primary-contrast;
+  color: $color-primary-lt;
   cursor: default;
 
   &:active {
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
 }
 
