--- a/src/assets/scss/6-components/_form.scss
+++ b/src/assets/scss/6-components/_form.scss
@@ -6,7 +6,7 @@
   padding: $space-tiny $space-small;
   border-radius: $border-radius;
   outline: none;
-  border: 1px solid $color-border;
+  border: 1px solid $color-form-border;
   font: inherit;
   font-size: $font-size-small;
   line-height: ($input-height - (2 * $space-tiny));
